feat: unify identities and support secure account merging
